--- a/DeviceSettings/res/values/arrays.xml
+++ b/DeviceSettings/res/values/arrays.xml
@@ -17,11 +17,11 @@
 <resources>
 
     <string-array name="notification_slider_action_entries" translatable="false">
-        <item>@string/notification_slider_mode_total_silence</item>
-        <item>@string/notification_slider_mode_silent</item>
-        <item>@string/notification_slider_mode_priority_only</item>
-        <item>@string/notification_slider_mode_vibrate</item>
-        <item>@string/notification_slider_mode_none</item>
+        <item>notification_slider_mode_total_silence</item>
+        <item>notification_slider_mode_silent</item>
+        <item>notification_slider_mode_priority_only</item>
+        <item>notification_slider_mode_vibrate</item>
+        <item>notification_slider_mode_none</item>
     </string-array>
 
     <string-array name="notification_slider_action_entry_values" translatable="false">
