--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -481,16 +481,16 @@
     <bool name="config_deviceHasVariableButtonBrightness">true</bool>
 
     <!-- Paths to the libraries that contain device specific key handlers -->
-    <string-array name="config_deviceKeyHandlerLibs" translatable="false">
+  <!--  <string-array name="config_deviceKeyHandlerLibs" translatable="false">
         <item>/system/priv-app/DeviceSettings/DeviceSettings.apk</item>
         <item>/system/priv-app/TouchGestures/TouchGestures.apk</item>
-    </string-array>
+    </string-array> -->
 
     <!-- Names of the key handler classes -->
-    <string-array name="config_deviceKeyHandlerClasses" translatable="false">
+    <!-- <string-array name="config_deviceKeyHandlerClasses" translatable="false">
         <item>com.aosip.device.DeviceSettings.KeyHandler</item>
         <item>com.android.touch.gestures.KeyHandler</item>
-    </string-array>
+    </string-array>  -->
 
     <!-- Whether device ignores the RSSNR signal implementation-->
     <bool name="config_ignoreRssnrSignalLevel">true</bool>
